feat: enhance task management with domain-driven design and GCP integration
- Introduced TaskId and UserId value objects for better type safety.
- Updated use case interfaces to use value objects instead of String for task and user identifiers.
- Added TaskValidationService for business rule validations.
- Implemented DomainConfiguration for application context setup.
- Enhanced application configuration for GCP integration.
- Added Terraform variables and outputs for GCP deployment.
- Created CloudResponseHelper for standardized response handling.
- Added error handling with custom exceptions for task operations.
- Updated .gitignore to exclude Terraform state files and credentials.

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,20 @@ jacoco.exec
 .env
 *.env
 
+# Terraform
+**/.terraform/
+**/.terraform.lock.hcl
+**/terraform.tfstate
+**/terraform.tfstate.backup
+**/terraform.tfvars
+**/plan_*
+**/*.zip
+
+# Cloud provider credentials
+**/gcp-key.json
+**/aws-credentials
+**/azure-credentials
+
 # Others
 *.swp
 *.swo
